Bug 165443 - Options - View - Use hardware acceleration options lockdown does not always works
Summary: Options - View - Use hardware acceleration options lockdown does not always w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, regression
Depends on:
Blocks: UI-Lockdown
  Show dependency treegraph
 
Reported: 2025-02-25 18:26 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-26 11:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example lockdown extension from user (826 bytes, application/xml)
2025-02-25 18:26 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the dialog with the ZZZ.xcd installed (19.97 KB, image/png)
2025-02-25 18:27 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-02-25 18:26:31 UTC
Created attachment 199443 [details]
Example lockdown extension from user

Since 

https://git.libreoffice.org/core/commit/bf7b0febbf3081a3693bf09bc4e779f7c6c30dc0

tdf#157837 - UI: Part 3 - Unify lockdown behavior of Options dialog

It is possible to lock down all entries of the Options - View tab AND display lock icons next to the items, plus disable the locked items.

However, the attached config extension locks the "Use hardware acceleration" down in a slightly wrong way:
the lock icon is displayed, but the checkbox is still usable. Clicking the box and the OK button leads to a crash.

1. Download the attached config extension
2. Copy it into the instdir/share/registry folder
3. Start LO, go to Tools - Options - View
-> The "Use hardware acceleration" option shows the lock icon, also the two Skia options. But unlike the latter two, the checkbox is not disabled.
4. Click on the "Use hardware acceleration" checkbox, then OK
-> crash

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 41ab24cecd6ad74312843f113d2faa13259cdb7d
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Interestingly the checkbox is properly disabled if the example attachment from bug 157837  attachment 190328 [details] is installed with the Extension Manager.

Main difference is that the attachment 190328 [details] has this line:

<prop oor:name="ForceSafeServiceImpl" oor:type="xs:boolean" oor:op="replace" oor:finalized="true">>

while the ZZZ.xcd attached here has:

<prop oor:name="ForceSafeServiceImpl" oor:finalized="true" oor:op="fuse" oor:type="xs:boolean"

The issue seems to have started in 7.2, before that the checkbox was properly disabled even with the ZZZ.xcd installed:

https://git.libreoffice.org/core/+/feafba7cc94247f45a82ee4f82f1b0a5f2f61656%5E%21

author	Luboš Luňák <l.lunak@collabora.com>	Tue Nov 24 12:41:08 2020 +0100
committer	Luboš Luňák <l.lunak@collabora.com>	Wed Nov 25 14:21:03 2020 +0100
tree 0c5c5993bca7d0ba7bec0fbbedeb81ebbca88eee
parent e41ca15fd67581dbf69322e6a18595d00ab7a151 [diff]

clean up enabling/disabling GUI options related to Skia
Comment 1 Gabor Kelemen (Collabora) 2025-02-25 18:27:07 UTC
Created attachment 199444 [details]
Screenshot of the dialog with the ZZZ.xcd installed
Comment 2 Commit Notification 2025-02-25 18:44:08 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db59ba7360507db722bcec5f0a4fb93017d379b0

tdf#165443 fix Locked config of ForceSafeServiceImpl ignored for SKIA

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.