tdf#165443 fix Locked config of ForceSafeServiceImpl ignored for SKIA

"Use hardware acceleration" should always be insensitive in case
of readonly config key.

Change-Id: I42476c167bed11ae5f2c98a68334daf8083402e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182177
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>